--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
@@ -31,6 +32,10 @@ dependencies {
     // RecyclerView dependency is added to override the
     // default 25.3.1 RecyclerView dependency stated by placeholderview
     // since we are using the 26.+ support libraries in the project
+
+    //SDKs for login and verification
+    implementation 'com.facebook.android:account-kit-sdk:4.+'
+    //SDKs for login and verification
 
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:recyclerview-v7:26.+'
@@ -60,7 +65,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
-    compile 'com.google.android.gms:play-services-safetynet:11.6.2'
     compile 'com.android.volley:volley:1.0.0'
 
 }
