--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,5 +66,6 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
     compile 'com.android.volley:volley:1.0.0'
+    compile files('libs/YouTubeAndroidPlayerApi.jar')
 
 }
