--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,25 +21,29 @@ android {
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     // RecyclerView dependency is added to override the
     // default 25.3.1 RecyclerView dependency stated by placeholderview
     // since we are using the 26.+ support libraries in the project
 
+    //SDKs for login and verification
+    implementation 'com.facebook.android:account-kit-sdk:4.+'
+    //SDKs for login and verification
+
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:recyclerview-v7:26.+'
     compile 'com.android.support:preference-v14:26.+'
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.+'
     compile 'com.android.support:cardview-v7:26.+'
-
     compile 'com.github.ksoichiro:android-observablescrollview'
     compile 'com.makeramen:roundedimageview:2.3.0'
     compile 'de.hdodenhof:circleimageview:2.2.0'
@@ -61,8 +65,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
-    compile 'com.google.android.gms:play-services-safetynet:11.6.2'
     compile 'com.android.volley:volley:1.0.0'
+    compile('com.razorpay:checkout:1.4.4')
     compile files('libs/YouTubeAndroidPlayerApi.jar')
-    compile('com.razorpay:checkout:1.4.1')
+
 }
