--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {
+            url 'http://dl.bintray.com/amulyakhare/maven'
+        }
         jcenter()
         google()
     }
