--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
 
         <!-- splash screen -->
         <activity android:name="com.twenty.four.crafts.app_startup.SplashScreen"
+            android:theme="@style/Theme.Transparent"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
