--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ android {
         applicationId "com.twenty.four.crafts"
         minSdkVersion 16
         targetSdkVersion 26
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -55,6 +56,7 @@ dependencies {
     compile 'com.makeramen:roundedimageview:2.3.0'
     compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.github.clans:fab:1.6.2'
+    //compile 'com.github.HITGIF:TextFieldBoxes:1.3.7'
     compile 'me.grantland:autofittextview:0.2.+'
     compile 'io.apptik.widget:multiselectspinner:1.0.12'
     compile 'com.daimajia.androidanimations:library:2.2@aar'
