--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     repositories {
+        mavenCentral()
         jcenter()
         google()
     }
@@ -16,9 +17,7 @@ buildscript {
 
 allprojects {
     repositories {
-        maven {
-            url 'http://dl.bintray.com/amulyakhare/maven'
-        }
+        mavenCentral()
         jcenter()
         google()
     }
