--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
 }
 
 repositories {
+    maven { url 'http://dl.bintray.com/amulyakhare/maven' }
     mavenCentral()
     jcenter()
     google()
@@ -31,12 +32,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     // RecyclerView dependency is added to override the
     // default 25.3.1 RecyclerView dependency stated by placeholderview
     // since we are using the 26.+ support libraries in the project
 
     //SDKs for login and verification
-
     //facebook
     implementation 'com.facebook.android:account-kit-sdk:4.+'
     implementation 'com.facebook.android:facebook-login:[4,5)'
@@ -44,8 +45,7 @@ dependencies {
     //google
     compile 'com.google.android.gms:play-services-auth:11.6.0'
 
-    //SDKs for login and verification
-
+    //other libraries
     compile 'com.android.support:recyclerview-v7:26.+'
     compile 'com.android.support:preference-v14:26.+'
     compile 'com.android.support:appcompat-v7:26.1.0'
@@ -56,7 +56,6 @@ dependencies {
     compile 'com.makeramen:roundedimageview:2.3.0'
     compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.github.clans:fab:1.6.2'
-    //compile 'com.github.HITGIF:TextFieldBoxes:1.3.7'
     compile 'me.grantland:autofittextview:0.2.+'
     compile 'io.apptik.widget:multiselectspinner:1.0.12'
     compile 'com.daimajia.androidanimations:library:2.2@aar'
@@ -81,5 +80,6 @@ dependencies {
     compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 
 }
+
 
 apply plugin: 'com.google.gms.google-services'
